Fix the overlap pop up on the find page

--- a/public/stylesheets/userPage.css
+++ b/public/stylesheets/userPage.css
@@ -9,6 +9,10 @@ body{
 
 /*---------Photo/Buttons ----------*/
 
+.follow_button{
+    width:100px;
+}
+
 .get_started{
     color:#329ca9;
     text-decoration: none;
